Fix bug for update and delete API, rearrange code in service
